basic layout is done
+ fancy plaatje voor testen

--- a/MSOProgramLearningApp/MSOAvaloniaApp/Views/MainWindow.axaml
+++ b/MSOProgramLearningApp/MSOAvaloniaApp/Views/MainWindow.axaml
@@ -3,7 +3,7 @@
         xmlns:vm="using:MSOAvaloniaApp.ViewModels"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
+        mc:Ignorable="d" d:DesignWidth="1600" d:DesignHeight="900"
         x:Class="MSOAvaloniaApp.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
         Icon="/Assets/avalonia-logo.ico"
@@ -15,12 +15,39 @@
         <vm:MainWindowViewModel/>
     </Design.DataContext>
     
-    <StackPanel Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Center" >
-        <Button Click="LoadHandler">Load Program</Button>
-        <Button Click="TurnHandler">Turn</Button>
-        <Button Click="MoveHandler">Move</Button>
-        <Button Click="RepeatHandler">Repeat</Button>
-    </StackPanel>
+    
+    
+    <Window.Styles>
+        <Style Selector="Button">
+            <Setter Property="Padding" Value="15"></Setter>
+            <Setter Property="FontSize" Value="20"></Setter>
+            <Setter Property="Margin" Value="5"></Setter>
+            <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+        </Style>
+        <Style Selector="StackPanel.Button">
+            <Setter Property="Width" Value="100"></Setter>
+        </Style>
+    </Window.Styles>
+    
+    <Grid ColumnDefinitions="0.5*,2*,2*" RowDefinitions="Auto, *, Auto, 0.4*" Margin="10">
+        <Button Click="LoadHandler" Padding="10" Grid.Column="0" Grid.Row="0">Load Program</Button>
+        <StackPanel Spacing="10" Orientation="Horizontal" VerticalAlignment="Top" HorizontalAlignment="Center" Grid.Column="1" Grid.Row="0">
+            <Button Click="TurnHandler"   Width="100">Turn</Button>
+            <Button Click="MoveHandler"   Width="100">Move</Button>
+            <Button Click="RepeatHandler" Width="100">Repeat</Button>
+        </StackPanel>
+        <TextBlock Grid.Row="0" Grid.Column="2" FontSize="40" FontWeight="Bold">Code Loopa app thingy</TextBlock>
+        
+        <TextBox Grid.Column="1" Grid.Row="1"  Name="CodeInput">Type ur code here broski</TextBox>
+        
+        <Image Grid.Row="1" Grid.Column="2" Source="../Assets/mauntain.bmp"></Image>
+        
+        <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Top">
+            <Button Click="RunHandler">RUN</Button>
+            <Button Click="MetricsHandler">Metrics</Button>
+        </StackPanel>
+        <TextBox Grid.Row="3" Grid.Column="1">Output</TextBox>
+    </Grid>
     
     
 </Window>
