RUn en Metrics knopje klaar enz

--- a/MSOProgramLearningApp/MSOAvaloniaApp/Views/MainWindow.axaml
+++ b/MSOProgramLearningApp/MSOAvaloniaApp/Views/MainWindow.axaml
@@ -44,7 +44,7 @@
         
         <StackPanel Grid.Row="2" Grid.Column="1" Orientation="Horizontal" VerticalAlignment="Top">
             <Button Command="{Binding OutputCommand}">RUN</Button>
-            <Button Click="MetricsHandler">Metrics</Button>
+            <Button Command="{Binding MetricsCommand}">Metrics</Button>
         </StackPanel>
         <TextBox Grid.Row="3" Grid.Column="1" Text="{Binding Output, Mode=OneWay}" IsReadOnly="True" ></TextBox>
     </Grid>
